added some new fonts to the html file and made some modifications in the css file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Salsa&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="src/style.css">
     <title>ClimaApp</title>
 </head>
@@ -20,13 +23,13 @@
 <div class="details-container">
    
     <div class="right-container"><span class="city">FRANCE</span><br>
-        <span>18:37-Monday 18 Jan 23</span><div class="properties"><div class="prop">HUMIDITY<br>55%</div><div class="prop_1" style="margin-left:10px ;">WIND<br>8km/hr</div></div>
+        <span style="color: #83878D;">18:37-Monday 18 Jan 23</span><div class="properties"><div class="prop">HUMIDITY<br>55%</div><div class="prop_1" style="margin-left:10px ;">WIND<br>8km/hr</div></div>
         
 
     </div>
     <div class="parent-temperature"><div class="conditions">
         <img src="https://openweathermap.org/img/wn/10d@2x.png">
-    </div><div><span class="temperature">26</span>&deg;C<br>Rainy</div>
+    </div><div><span class="temperature">26</span>&deg;C<br><span style="color: #83878D;">Rainy</span></div>
     </div>
 </div>
 </main>
