Added some links to the html file

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 </div>
 </main>
-<footer>Designed and built by<a href="#" target="_blank"> Ritah</a> and is on<a href="#" target="_blank"> Github</a> and hosted on <a href="#" target="_blank">netlify</a></footer>
+<footer>Designed and built by<a href="https://github.com/Ritahrouse/" target="_blank"> Ritah</a> and is on<a href="https://github.com/Ritahrouse/ClimaApp" target="_blank"> Github</a> and hosted on <a href="https://zesty-boba-c7349f.netlify.app/" target="_blank">netlify</a></footer>
 </div>
 <script src="src/index.js"></script>
     
