Removed the default values in the html file

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 <main>
 <div class="details-container">
    
-    <div class="right-container"><span class="city" id="city_search">France</span><br>
-        <span style="color: #83878D;" id="time_day"></span><div class="properties"><div class="prop">HUMIDITY<br><span id="humidity">55%</span></div><div class="prop_1" style="margin-left:10px ;">WIND<br><span id="wind">8km/hr</span></div></div>
+    <div class="right-container"><span class="city" id="city_search"></span><br>
+        <span style="color: #83878D;" id="time_day"></span><div class="properties"><div class="prop">HUMIDITY<br><span id="humidity"></span></div><div class="prop_1" style="margin-left:10px ;">WIND<br><span id="wind"></span></div></div>
         
 
     </div>
     <div class="parent-temperature"><div class="conditions" id="icon">
         <img src="https://openweathermap.org/img/wn/10d@2x.png">
-    </div><div><span class="temperature" id="temp">26</span>&deg;C<br><span style="color: #83878D;" id="condition">Rainy</span></div>
+    </div><div><span class="temperature" id="temp"></span>&deg;C<br><span style="color: #83878D;" id="condition"></span></div>
     </div>
 </div>
 </main>
