Add the forecast to the code

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </div><div><span class="temperature" id="temp"></span>&deg;C<br><span style="color: #83878D;" id="condition"></span></div>
     </div>
 </div>
+<div class="weather-forecast" id="forecast"></div>
 </main>
 <footer>Designed and built by<a href="https://github.com/Ritahrouse/" target="_blank"> Ritah</a> and is on<a href="https://github.com/Ritahrouse/ClimaApp" target="_blank"> Github</a> and hosted on <a href="https://zesty-boba-c7349f.netlify.app/" target="_blank">netlify</a></footer>
 </div>
