--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 <div class="weather-forecast" id="forecast"></div>
 </main>
-<footer>Designed and built by<a href="https://github.com/Ritahrouse/" target="_blank"> Ritah</a> and is on<a href="https://github.com/Ritahrouse/ClimaApp" target="_blank"> Github</a> and hosted on <a href="https://zesty-boba-c7349f.netlify.app/" target="_blank">netlify</a></footer>
+<footer>Designed and built by<a href="https://github.com/Ritahrouse/" target="_blank"> Ritah</a> and is on<a href="https://github.com/Ritahrouse/ClimaApp" target="_blank"> Github</a> and hosted on <a href="https://main--clima-app-shecodes.netlify.app/" target="_blank">netlify</a></footer>
 </div>
 <script src="src/index.js"></script>
     
